samples/_failures_safe/1761168767_6a1c8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_438a478b.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_438a478b.c:160:5: error: expected declaration or statement at end of input
  160 |     parser->current_token = lexer_next_token(parser->lexer);
      |     ^~~~~~
